<resources>
    <string name="app_name">Running Probe</string>

    <!-- UI elements-->
    <string name="start_run">Start løpetur!</string>
    <string name="stop_run">Stopp løpetur</string>
    <string name="finalize">Avslutt</string>
    <string name="position">Posisjon: </string>
    <string name="last_update">Sist oppdatert: </string>
    <string name="file">Fil: </string>
    <string name="low_intensity">lav intensitet</string>
    <string name="medium_intensity">middels intensitet</string>
    <string name="high_intensity">høy intensitet</string>

    <!-- questions-->
    <string name="probe1">I hvilken grad tenkte du på noe annet enn løping?</string>
    <string name="probe2">Var tankene dine intensjonelle eller spontane?</string>
    <string name="probe3">Hvordan opplevde du den siste delen av turen?</string>
    <string name="probe1_lower">ikke i det hele tatt</string>
    <string name="probe1_upper">svært mye</string>
    <string name="probe2_lower">intensjonelle</string>
    <string name="probe2_upper">spontane</string>
    <string name="probe3_lower">dårlig</string>
    <string name="probe3_upper">bra</string>
    <string name="title_activity_post_run_questionnaire">PostRunQuestionnaire</string>
    <string name="postq_thanks">
        Takk for at du bidro med dine data fra denne løpeturen!\n\n
        Vi ønsker nå å spørre deg noen enkle spørsmål om løpeturen din.\n\n
    </string>
    <string name="q1_overall_quality">
        Hvordan opplevde du turen i sin helhet?
    </string>
    <string name="q1_lower">dårlig</string>
    <string name="q1_upper">bra</string>

    <string name="q2_rain">Regnet det?</string>

    <string-array name="q2_options">
        <item>Nei</item>
        <item>Litt</item>
        <item>Veldig mye</item>
    </string-array>

    <string name="q3_problems">Hadde du problemer med utstyret?</string>
    <string-array name="q3_options">
        <item>Nei</item>
        <item>Med pulsmåler/egen GPS</item>
        <item>Med selve appen</item>
    </string-array>

    <string name="q4_location">Hvordan vil du beskrive omgivelsene du løp i?</string>
    <string-array name="q4_options">
        <item>Landlige</item>
        <item>urbane</item>
        <item>annet</item>
    </string-array>

    <string name="q5_noise">
        Hvordan var støynivået fra omgivelsene under turen?
    </string>
    <string name="q5_lower">meget stille</string>
    <string name="q5_upper">mye støy</string>

    <string name="final_message_title">
        Takk!
    </string>
    <string name="final_message">
        Tusen takk for at du deltok i studien!\n
        Du kan nå dele filen som ligger under %1$s med eksperimentlederen
        (spør hvis dette innebærer tekniske problemer).\n
        Håper du tar deg en tur til, snart!
    </string>

</resources>
