<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_thought_probe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mittnerlab.runningprobe.ThoughtProbeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/imageView2"
                android:adjustViewBounds="false"
                android:cropToPadding="false" />

            <TextView
                android:id="@+id/textview_postq_thanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/postq_thanks" />

            <!-- *************************************** -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/textview_postq_thanks"
                android:paddingTop="10sp">

            <TextView
                android:id="@+id/textview_postq1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_below="@+id/textview_postq_thanks"
                android:text="@string/q1_overall_quality" />

            <SeekBar
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:progress="0"
                android:layout_below="@+id/textview_postq1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="23dp"
                android:id="@+id/seekBar_postq1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:paddingEnd="20dip"
                android:paddingStart="20dip" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_below="@+id/seekBar_postq1"
                android:layout_height="wrap_content">
            <TextView
                android:text="@string/q1_lower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="false"
                android:id="@+id/textview_q1_lower"
                android:paddingStart="10dip" />

            <TextView
                android:text="@string/q1_upper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_q1_upper"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:paddingEnd="10dip" />
            </RelativeLayout>
            </LinearLayout>
            <!-- *************************************** -->
            <LinearLayout
                android:id="@+id/postq2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/seekBar_postq1"
                android:paddingTop="10sp">
            <TextView
                android:id="@+id/textview_postq2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/q2_rain" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/q2_dropdown"
                    android:minWidth="100sp"
                    android:layout_marginTop="12sp" />
            </LinearLayout>

        <!-- *************************************** -->
        <LinearLayout
            android:id="@+id/postq3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/postq2">
            <TextView
                android:id="@+id/textview_postq3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/q3_problems" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q3_dropdown"
                android:minWidth="100sp"
                android:layout_marginTop="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/postq4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/postq3">
            <TextView
                android:id="@+id/textview_postq4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/q4_location" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q4_dropdown"
                android:minWidth="100sp"
                android:layout_marginTop="12sp" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/postq4"
                android:paddingTop="10sp">

                <TextView
                    android:id="@+id/textview_postq5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/q5_noise" />

                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="5"
                    android:progress="0"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="23dp"
                    android:id="@+id/seekBar_postq5"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="20dip"
                    android:paddingStart="20dip" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/q5_lower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="false"
                        android:id="@+id/textview_q5_lower"
                        android:paddingStart="10dip" />

                    <TextView
                        android:text="@string/q5_upper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textview_q5_upper"
                        android:layout_alignParentEnd="false"
                        android:layout_alignParentRight="true"
                        android:paddingEnd="10dip" />
                </RelativeLayout>
            </LinearLayout>




            <Button
                android:text="OK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_postq"
                android:layout_weight="1"
                android:onClick="submitPostQuestionnaire"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="45dp"
                android:layout_marginTop="45dp" />

        </LinearLayout>
</ScrollView>

    <!--<include layout="@layout/content_post_run_questionnaire" />-->
</RelativeLayout>
